--- a/css/main.css
+++ b/css/main.css
@@ -132,46 +132,7 @@ textarea {
     font-family: 'PT Sans',sans-serif;
     margin: 0;
   }
-  .button{
-    background-color: white;
-    padding: 10px 40px;
-    color: white;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-family: 'Oswald',sans-serif;
-    text-decoration: none;
-    font-size: 1em;
-    margin-top: 20px;
-    display: inline-block;
-    transition: all .3s ease;
-    border:2px solid;
-    cursor: pointer;
-  }
-  .button.hollow,
-  .button.hollow:hover{
-    background-color: white;
-    color: white;
-    
-  }
-  .button.transparente{
-    background-color: transparent;
-    border:2px solid white;
-  }
-  .button.transparente:hover{
-    border:2px solid white;
-  }
 
-  ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  .button:hover{
-    background-color: #e33000;
-  }
-  .float-right{
-    float:right;
-  }
   .seccion p{
     font-size: 1.2 em;
     text-align: center;
@@ -179,66 +140,7 @@ textarea {
   p{
     color: white;
   }
-  .contenedor{
-    width: 98%;
-    margin: auto;
-  }
-  @media(min-width: 480px){
-    .contenedor{
-      width: 95%;      
-    }
-  }  
-  @media(min-width: 768px){
-    .contenedor{
-      width: 90%;      
-    }
-  }  
-  @media(min-width: 992px){
-    .contenedor{
-      width: 90%;      
-      max-width: 1100px;
-    }
-  }
 
-
-  /**Lettering**/
-  h1.nombre-sitio span{
-    position: relative;
-    text-shadow: 0 0 30px black;
-  }
-  @media(min-width: 992px){
-    .char1{
-      top: 20px;
-      right: 20px;
-    }
-    .char2{
-      top: 0px; right: 10px;
-    }
-    .char3{
-      top: 10px; right: 20px;
-    }
-    .char4{
-      top: 5px; right: 10px;
-    }
-    .char5{
-      top: 15px; right: 10px;
-    }
-    .char6{
-      top: 5px; right: 10px;
-    }
-    .char7{
-      top: -20px; right: -10px;
-    }
-    .char8{
-      top: 0px; right: 10px;
-    }
-    .char9{
-      top: 10px; right: 20px;
-    }
-    .char10{
-      top: 20px; right: 20px;
-    }
-  }
 /*Header*/
 
 div.titulo-universidad{
@@ -248,105 +150,11 @@ div.titulo-universidad{
 div.titulo-universidad h2{
   color: white;
   padding-top: 20px;
+  margin-top: -10px;
 }
 
 
-div.hero{
-  background-image: url(../img/udg.jpg);
-  height: 100vh;
-  background-position: top center;
-  background-size: cover ;
-}
-div.contenido-header{
-  padding-top: 40px;
-}
-@media(min-width: 768px){
-  div.contenido-header{
-    padding-top: 10px;
-  }
-}
-nav.redes-sociales{
-  text-align: center;
-}
-nav.redes-sociales a{
-  color: white;
-  font-size: 2em;
-  margin-right: 20px;
-}
-nav.redes-sociales a:last-child{
-  margin-right: 0;
-}
-div.informacion-evento{
-  text-align: center;
-  color: white;
-}
-@media(min-width: 768px){
-  div.informacion-evento{
-     width: 70%;
-     margin:auto;
-     margin-top: 20px;
-  }
-}
-div.informacion-evento p{
-  margin:0;
-  display: inline;
-  font-size: 20px;
-  text-transform: uppercase;
-}
-div.informacion-evento p i{
-  color: white;
-  font-size: 2rem;
-}
-p.fecha{
-  float: left;
-}
-p.ciudad{
-  float: right;
-  text-align: right;
-}
-p.slogan{
-  text-transform: none !important;
-}
-p.slogan span{
-  font-weight: bold;
-}
-h1.nombre-sitio{
-  font-size: 5.9vw;
-  text-transform: uppercase;
-  font-family: 'PT Sans', sans-serif;
-}
-@media(min-width: 768px){
-    h1.nombre-sitio{
-    font-size: 9.7vw;
-    margin: 0;
-    font-family: 'PT Sans', sans-serif;  
-  }
-}
 
-/*barra*/
-div.barra{
-  background-color: #353535;
-  padding:20px;
-}
-.fixed{
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1001;
-}
-div.logo{
-  width: 20%;
-  float: left;
-}
-div.logo img{
-  width: 100% ;
-}
-@media(min-width: 768px){
-  div.logo{
-    width: 33%;    
-  }   
-}
 /*Navegacion principal*/
 section.fondo{
   background-color: yellow !important;
@@ -392,571 +200,29 @@ nav.navegacion-principal a:last-child:hover{
     margin:0 10px 0 0;
   }
 }
-/*Menu movil*/
-div.menu-movil{
-  width: 60px;
-  display: block;
-  float: right;
-  text-align: right;
-  margin-top: 12px;
-  
-}
-div.menu-movil:hover{
-  cursor: pointer;
-}
-@media(min-width:768px ){
-  div.menu-movil {    
-    display: none;
-  }
-}
-div.menu-movil span{
-  height: 8px;
-  margin-bottom: 6px;
-  background-color: white;
-  display: block;
-}
 
-/*Talleres*/
-section.programa{
-  position: relative;
-}
-div.contenedor-video{
-  max-width: 100%;
-  overflow-x:hidden;
-}
-div.contenido-programa{
-  position: absolute;
-  top:0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
-div.programa-evento{
-  background-color:rgba(255,255,255,.8);
-  padding: 15px;
-  margin-top: 80px;
-}
-@media(min-width: 768px){
-  div.programa-evento{
-    width: 70%;
-  } 
-}
-@media(min-width: 922px){
-  div.programa-evento{
-    width: 50%;
-  }   
-}
-
-nav.menu-programa{
-  width: 100%;
-  
-  
-}
-@media(min-width: 768px){
-  nav.menu-programa{
-    display: table;    
-  }
-}
-nav.menu-programa a{
-  display: block;
-  text-align:center;
-  color: black;
-  text-decoration: none;
-  font-family: 'Oswald',sans-serif;
-  margin-bottom: 10px;
-  font-size: 1.2em;
-  position: relative;
-  padding-bottom: 10px;
-  border-bottom: 1px solid white;
-}
-nav.menu-programa a.activo::after{
-  position: absolute;
-  content: '';
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  height: 20px;
-  width: 30px;
-  background-image: url('../img/talleres-flecha.jpg');
-  background-position: top center;
-  background-repeat: no-repeat;
-  bottom: -20px;
-}
-@media(min-width: 768px){
-  nav.menu-programa a{
-    display: table-cell;    
-  }
-}
-nav.menu-programa a i,
-div.detalle-evento p i{
-  color: white;
-  font-size: 1.6em;
-  margin-right: 10px;
-}
-div.ocultar{
-  display:none;
-}
-/*Detalle evento*/
-div.detalle-evento{
-  margin-top: 20px;
-  border-bottom: 1px solid black;  
-  padding: 0 20px;
-}
-div.detalle-evento:nth-child(2){
-  border: none;  
-}
-div.detalle-evento p{
-  margin-bottom: 20px;
-  font-size: 20px;
-}
-
-/*Invitados*/
-ul.lista-invitados li{
-  padding: 10px;
-  float: left;
-}
-@media(min-width: 480px){
-  ul.lista-invitados li{
-    width: 50%;
-  } 
-}
-@media(min-width: 720px){
-  ul.lista-invitados li{
-    width: 33.3%;
-  } 
-}
-div.invitado{
-  position: relative;
-  overflow: hidden;
-}
-div.invitado img{
-  max-width: 100%;
-  filter: gray;
-  -webkit-filter: grayscale(1);  
-  -webkit-transition: all .5s ease-in-out;
-}
-div.invitado:hover img{
-  -webkit-filter: grayscale(0);  
-  -webkit-transform: scale(1.1);
-
-}
-
-div.invitado p{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 15px 10px;
-  margin: 0;
-  background-color: rgba(0,0,0,0.55);
-  width: 100%;
-  font-family: 'Oswald', sans-serif;
-  color: white;
-  text-transform: uppercase;
-  -webkit-transition: all .5s ease-in-out ;
-}
-div.invitado:hover p{
-  bottom: -80px;
-  opacity: 0;
-}
-
-/**Contador**/
-.parallax::before{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-  -webkit-filter: brightness(.8);
-  filter: brightness(.8);
-}
-div.contador{
-  position:relative;
-  height: auto;
-}
-div.contador::before{
-  background-image: url(../img/bg-resumen.jpg);
-  content: '';
-}
-ul.resumen-evento{
-  position:relative;
-  padding: 120px 0;
-}
-ul.resumen-evento li{
-  width: 50%;
-  float: left;
-  text-align: center;
-  color: white;
-  text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
-  font-size: 24px;
-}
-@media(min-width: 768px){
-  ul.resumen-evento li{
-    width: 25%;    
-  } 
-}
-p.numero{
-  color: white;
-  font-size: 4em;
-  display: block;
-  margin: 0 0 10px 0;
-  font-family: 'Oswald', sans-serif;
-}
-
-/*Tabla de precios*/
-ul.lista-precios > li{
-  padding: 10px;
-}
-@media(min-width: 768px){
-  ul.lista-precios > li{
-    float: left;
-    width: 33.3%;
-  }
-}
-
-div.tabla-precio{
-  border:1px solid #e1e1e1;
-  background-color: white;
-  padding: 40px 0;
-  text-align: center;
-  transition: all .3s ease;
-}
- 
-div.tabla-precio:hover{
-  transform: scale(1.1);
-  border: 1px solid white;
-  box-shadow: 0px 0px 55px #666666;
-}
-
-div.tabla-precio ul li{
-  font-family: 'Pt Sans',sans-serif;
-  font-size: 14px;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  color: #868686;
-  line-height: 26px;
-}
-div.tabla-precio ul li:before{
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 600;  
-  display: inline-block;
-  vertical-align: top;
-  padding: 0 5px;
-  font-size: 20px;
-  color: green;
-  -webkit-font-smoothing:antialiased;
-  content: "\f00c";
-}
-div.tabla-precio h3{
-  font-family: 'Oswald', sans-serif;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-div.tabla-precio p.numero{
-  color: black;
-  margin: 20px 0;
-}
-
-/*Mapa*/
-
-div.mapa{
-  height: 420px;
-  
-}
-/*Testimoniales*/
-
-div.testimoniales{
-  padding-bottom: 20px;  
-}
-div.testimonial{
-  padding: 5px;
-}
-@media(min-width: 768px){
-  div.testimonial{
-    float: left;
-    width: 33.3%;
-  }
-}
-blockquote{
-  background-color: white;
-  border: 1px solid #e1e1e1;
-  position: relative;
-  margin: 0 0 10px 0 ;
-  padding-bottom: 20px;
-}
-blockquote p{
-  text-align: left !important;
-  font-size: .8em !important;
-  font-family: 'PT Sans',sans-serif;
-  padding:0 20px 0 65px;
-}
-blockquote p:before{
-  content: '\201c';
-  position: absolute;
-  left: 13px;
-  top: 0px  ;
-  font-size: 8rem;
-  margin: 0;
-  padding:0;
-  line-height: 1;
-  color: white;
-}
-footer.info-testimonial{
-  padding:0;  
-  background-color: transparent;
-}
-footer.info-testimonial img{
-  float:left;
-  width: 20%;
-  border-radius: 50%;
-  margin-left: 20px;
-}
-footer.info-testimonial cite{
-  text-align: left;
-  color:white;
-  text-transform: uppercase;
-  font-size: 12px;
-  padding-top: 20px;
-  width: 66.6%;
-  float:right;
-  font-family: bold;  
-  font-style:normal;
-}
-
-footer.info-testimonial cite span{
-  color:black;
-  display: block;
-  text-transform: none;
-  margin-top: 5px;
-}
-
-/*Newsletter*/
-div.newsletter{
-  position: relative;
-  height: auto;
-}
-div.newsletter:before{
-  background-image: url(../img/bg-newsletter.jpg);
-  content: '';
-}
-div.newsletter .contenido{
-  padding:100px 0;
-  color: white;
-  text-align: center;
-  position: relative;
-}
-div.newsletter .contenido p{
-  font-size: 1.2em;
-  text-transform: lowercase;
-}
-div.newsletter .contenido h3{
-  color: white;
-  text-transform: uppercase;
-  font-size: 7vw;
-  font-family: 'PT Sans',sans-serif;
-
-}
-/*Cuenta Regresiva*/
-div.cuenta-regresiva ul li{
-  text-transform: uppercase;
-  font-family: 'Oswald',sans-serif;
-  font-size: 1.6rem;
-  text-align: center;
-}
-@media(min-width: 768px){
-  div.cuenta-regresiva ul li{
-    width: 25%;
-    float: left;
-  }
-}
-
-/*Footer*/
-
-footer{
-  background-color: #353535;
-  padding-top: 40px;
-  margin-top: 20px;
-}
-footer .contenedor >div{
-  color: white;
-  padding: 0 20px;
-  font-size: 12px;
-  text-align: justify;
-}
-@media(min-width: 768px){
-  footer .contenedor >div{
-    width: 33.3%;
-    float: left;
-  }
-}
-
-footer h3{
-  color: white;
-  text-transform: uppercase;
-  font-family: 'Oswald',sans-serif;
-  margin-bottom: 20px;
-}
-footer h3 span{
-  color: white;
-}
-footer .ultimos-tweets li{
-  margin-bottom: 10px;
-}
-
-footer nav.redes-sociales{
-  text-align: left;
-}
-
-p.copyright{
-  background-color: #2e2e2e;
-  color: white;
-  padding: 10px 0;
-  margin: 20px 0 0 0  ;
-  text-align: center;
-}
-
-/***Internas***/
-/*Conferencia*/
-div.galeria a{
-  display: inline-block;
-  margin-bottom: 5px;
-
-}
-body.conferencia .navegacion-principal .activo{
-   border-bottom: 2px solid white;
-}
-/*Registro**/
-form.registro h3{
-  text-align: center;
-  text-transform: uppercase;
-  margin: 20px 0 0 0;
-}
-form.registro label{
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-h4{
-  text-align: center;
-  text-transform: uppercase;
-  border-bottom: 2px solid white;
-  padding-bottom: 10px;
-  font-size: 1.2em;
-}
-div.caja{
-  background-color: white;
-  border-bottom: 1px solid #e1e1e1;
-  padding: 10px;
-  margin: 10px;
-}
-div.campo{
-  padding: 20px;
-}
-@media(min-width: 768px){
-  div.campo{
-    float: left;
-    width: 33.3%;
-  }
-}
-div.paquetes .tabla-precio:hover{
-   transform: none;
-   box-shadow: none;
-}
-div.paquetes .tabla-precio input{
-  clear: both;
-  width: 40px;
-  margin: 10px auto 0 auto;
-  display: block;
-}
-
-.contenido-dia{
-  padding: 20px;
-  display: none;
-}
-@media(min-width: 768px){
-  .contenido-dia >div{
-  float: left; 
-  width: 33.3%;
-  }
-}
-.contenido-dia >div p {
-  text-align: left;
-}
-.contenido-dia >div label{
-  display: block;
-  margin-bottom: 10px;
-}
-.contenido-dia >div input{
-  margin-right: 10px;
-}
-.contenido-dia >div label time{
-  color:white;
-  font-weight: bold;
-}
-
-/*Resumen Registro*/
-
-div.resumen p{
-  font-size: 1.2em;
-  text-transform: uppercase;
-}
-div.resumen div.extras{
-  float: left;
-  width: 50%;
-  padding: 30px;
-}
-div.extras div.orden{
-  text-align: left;
-  margin-bottom: 10px;
-}
-div.extras div.orden input{
-  margin: 10px 0 0 0 ;
-}
-div.resumen div.total{
-  float: right;
-  width: 50%;
-  padding: 30px;
-}
-
-div.resumen input{
-  display: block;
-  margin: 10px auto;
-}
-
-#lista-productos{
-  background-color: #e1e1e1;
-  padding: 20px;
-  display: none;
-}
-#suma-total{
-  text-align: center;
-  font-size: 2em;
-  color: white;
-}
-input[disabled].button{
-  opacity: 5;
-}
-#error{
-  clear: both;
-  padding: 20px;
-  text-align: center;
-  display: none;
-}
 
 /**Calendario**/
+/****Dias contenedor de cada día******/
+.dias{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+
 div.calendario:after{ 
   clear: both;
-  display: block;
+  display: inline-block;
   content: '';
 
 }
+
+/*Dia por separado*/
 div.dia{
-  width:50%;
-  float: left;
+  min-width:33.3%;
+  width: 50%;
+  /* float: center; */
   border: 2px solid #e1e1e1;
   background-image: linear-gradient(to right,black,#d93a12);
 }
@@ -969,6 +235,10 @@ div.dia{
 div.dia:hover{
   background-color: #e1e1e1;
 }
+
+
+
+
 
 /*Fin de codigo*/
 /* ==========================================================================
